0.75.1 (??)
  * Changing sort to be an in-place method.
  * Renaming SORT_ORDER_DECENDING to SORT_ORDER_DESCENDING

0.75.0 (28 Nov 2014)
  * Realm now implements Closeable, allowing better cleanup of native resources
  * Adding writeCopyTo() and compactRealmFile() to write and compact a Realm to a new file.
  * RealmObject.toString(), equals() and hashCode() now support models with cyclic references.
  * RealmResults.iterator() and listIterator() now correctly iterates the results when using remove().
  * Bug fixed in Exception text when field names was not matching the database
  * Bug fixed so Realm no longer throws an Exception when removing the last object
  * Bug fixed in RealmResults which prevented sub-querying
  * The Date type does not support millisecond resolution, and dates before 1900-12-13
    and dates after 2038-01-19 are not supported on 32 bit systems
  * Fixed bug so Realm no longer throws an Exception when removing the last object
  * Bug fixed in RealmResults which prevented subquerying



0.74.0 (19 Nov 2014)
  * Added support for more field/accessors naming conventions
  * Allow static methods in model classes
  * An exception will now be thrown if you try to move Realm, RealmResults or RealmObject between threads.
  * Fixed a bug in the calculation of the maximum of date field in a RealmResults
  * Adding case sensitive versions of string comparison operators equalTo and notEqualTo
  * Adding where() to RealmList to initiate queries
  * Updated core to 0.86.0, fixing a bug in cancelling an empty transaction, and major query speedups with floats/doubles
  * Consistent handling of UTF-8 strings
  * removeFromRealm() now calls moveLastOver() which is faster and more reliable when deleting multiple objects
  * Added verification of fields names in queries with links.
  * Added exception for queries with invalid field name

0.73.1 (05 Nov 2014)
  * Fixed a bug that would send infinite notifications in some instances

0.73.0 (04 Nov 2014)